Fixed navbar collapse and color

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -44,12 +44,13 @@ strong {
     border-bottom: 2px solid lightgrey;
 }
 
-.menu-text {
-    font-family: Josefin Sans;
+.nav.navbar-nav.navbar-right li a {
     color: white;
+    font-family: Josefin Sans, Arial, cursive;
+    font-size: 16px;
 }
 
-.menu-text:hover {
+.nav.navbar-nav.navbar-right li a:hover {
     color: #6F79FF;
     transition: 0.5s;
 }
@@ -77,6 +78,10 @@ html, body {
 
 .carousel-inner {
     height: 100%;
+}
+
+#myCarousel {
+    top: -20px;
 }
 
 .fill {
